--- a/style.css
+++ b/style.css
@@ -42,6 +42,11 @@ nav a{
 a:hover {
     color:#007d7b;
 }
+[href="#top"] {
+    position:fixed;
+    bottom:0px;
+    right:0px;
+}
 main p{
    margin-left:10px;
 }
